# ComfyUIBot

./: .env.example  .gitignore  README.md  comfy_api.py  comfy_cog.py  comfy_options.py  comfy_websocket.py  draw_job.py  job_db.py  main.py  pyproject.toml  requirements.txt  settings.py  system_prompt copy 2.txt  system_prompt copy.txt  system_prompt.txt
actions/: __init__.py  base_job.py  dream.py  glitch.py  search.py  upscale.py
api/: chat_history_db.py  civitai_api.py  comfy_api.py  comfy_websocket.py  job_db.py  job_tracker.py  model_db.py  openai_api.py  tea_db.py  websocket_subsystem.py
bot/: civitai_cog.py  civitai_options.py  comfy_cog.py  comfy_options.py  tea_cog.py  tea_cog_message_queue.py  utils.py  view.py
cogs/: view.py
cogs/admin_cog/: __init__.py  admin_cog.py
cogs/civitai_cog/: civitai_cog.py
cogs/comfy_cog/: comfy_cog.py  comfy_options.py
cogs/tea_cog/: tea_cog.py  tea_cog_message_queue.py
dispatchers/: dream_dispatcher.py  upscale_dispatcher.py
models/: autoreply.py  sd_options.py
templates/: glitch.j2  sd-1.5.j2  sdxl-1.0.j2  upscale.j2
utils/: error_utils.py  logging_config.py  message_utils.py
